# fbnames_3_8

./: .gitignore  2021-billionaires-eda.ipynb  2021-billionaires-eda.py  README.md  andrew_process.py  data_processor.py  exam_script.py  py_convert.py  pyproject.toml  requirements.txt  setup.cfg
data/: billionaires.tsv  billionaires.xlsx
errata/: error_list.txt
tests/: test_data_processor.py
